Issue #SB-19279 fix: alignment on different screens and tutorial image

--- a/src/app/components/popups/sb-tutorial-popup/sb-tutorial-popup.component.scss
+++ b/src/app/components/popups/sb-tutorial-popup/sb-tutorial-popup.component.scss
@@ -18,7 +18,8 @@ img.arrow-icon{
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
+  
 }
 
 .close-icon {
@@ -34,7 +35,6 @@ img.arrow-icon{
   line-height: 19px;
   text-align: center;
   color: #333333;
-  margin-top: 2rem;
 }
 
 #heading-text {
